--- a/todosapi/src/main/resources/application.properties
+++ b/todosapi/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= password
 
+spring.security.oauth2.client.registration.github.client-id=c2319932cfb57ee9db89
+spring.security.oauth2.client.registration.github.client-secret=192acbab8a7c9119ed950379032cba881c5676d4
+spring.security.oauth2.client.registration.github.scope=user
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.hibernate.ddl-auto= update
